<resources>
    <string name="app_name">Weather Clear</string>

    <string name="ok">OK</string>
    <string name="search">Search…</string>
    <string name="loading">Loading…</string>
    <string name="current">Current</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="oops">Oops!</string>
    <string name="city_not_found">City not found!</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="drizzle">Drizzle</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="mist">Mist</string>
    <string name="smoke">Smoke</string>
    <string name="haze">Haze</string>
    <string name="dust">Dust</string>
    <string name="fog">Fog</string>
    <string name="sand">Sand</string>
    <string name="ash">Ash</string>
    <string name="squall">Squall</string>
    <string name="tornado">Tornado</string>
    <string name="clear">Clear</string>
    <string name="clouds">Clouds</string>

    <string name="clear_sky">Clear sky</string>
    <string name="few_clouds">Few clouds</string>
    <string name="scattered_clouds">Scattered clouds</string>
    <string name="broken_clouds">Broken clouds</string>
    <string name="overcast_clouds">Overcast clouds</string>

    <string name="light_rain">Light rain</string>
    <string name="moderate_rain">Moderate rain</string>
    <string name="heavy_intensity_rain">Heavy intensity rain</string>
    <string name="very_heavy_rain">Very heavy rain</string>
    <string name="extreme_rain">Extreme rain</string>
    <string name="freezing_rain">Freezing rain</string>

    <string name="light_intensity_shower_rain">Light intensity shower rain</string>
    <string name="shower_rain">Shower rain</string>
    <string name="heavy_intensity_shower_rain">Heavy intensity shower rain</string>
    <string name="ragged_shower_rain">Ragged shower rain</string>

    <string name="light_snow">Light snow</string>
    <string name="heavy_snow">Heavy snow</string>
    <string name="sleet">Sleet</string>
    <string name="light_shower_sleet">Light shower sleet</string>
    <string name="shower_sleet">Shower sleet</string>
    <string name="light_rain_and_snow">Light rain and snow</string>
    <string name="rain_and_snow">Rain and snow</string>
    <string name="light_shower_snow">Light shower snow</string>
    <string name="shower_snow">Shower snow</string>
    <string name="heavy_shower_snow">Heavy shower snow</string>

    <string name="sand_dust_whirls">Sand/dust whirls</string>
    <string name="volcanic_ash">Volcanic ash</string>
    <string name="squalls">Squalls</string>

    <string name="light_intensity_drizzle">Light intensity drizzle</string>
    <string name="heavy_intensity_drizzle">Heavy intensity drizzle</string>
    <string name="light_intensity_drizzle_rain">Light intensity drizzle rain</string>
    <string name="drizzle_rain">Drizzle rain</string>
    <string name="heavy_intensity_drizzle_rain">Heavy intensity drizzle rain</string>
    <string name="shower_rain_and_drizzle">Shower rain and drizzle</string>
    <string name="heavy_shower_rain_and_drizzle">Heavy shower rain and drizzle</string>
    <string name="shower_drizzle">Shower drizzle</string>

    <string name="thunderstorm_with_light_rain">Thunderstorm with light rain</string>
    <string name="thunderstorm_with_rain">Thunderstorm with rain</string>
    <string name="thunderstorm_with_heavy_rain">Thunderstorm with heavy rain</string>
    <string name="light_thunderstorm">Light thunderstorm</string>
    <string name="heavy_thunderstorm">Heavy thunderstorm</string>
    <string name="ragged_thunderstorm">Ragged thunderstorm</string>
    <string name="thunderstorm_with_light_drizzle">Thunderstorm with light drizzle</string>
    <string name="thunderstorm_with_drizzle">Thunderstorm with drizzle</string>
    <string name="thunderstorm_with_heavy_drizzle">Thunderstorm with heavy drizzle</string>
    <string name="app_title">WEATHER CLEAR</string>
    <string name="chile">CHILE</string>
    <string name="version_number">version 2.3.1</string>
    <string name="quick_search">Quick Search</string>
    <string name="add_to_main_screen">Add to Quick Search</string>
    <string name="remove_from_main_screen">Remove from Quick Search</string>
    <string name="city_added_to_quick_search">City added to Quick Search</string>
    <string name="city_was_not_added_to_quick_search">City was not added to Quick Search</string>
    <string name="city_removed_from_quick_search">City removed from Quick Search</string>
    <string name="city_was_not_removed_from_quick_search">City was not removed from Quick Search</string>
    <string name="gps_not_working">Your GPS is not working</string>
    <string name="empty_value">-</string>
    <string name="add_city_slot">+ Add</string>
    <string name="use_current_location">USE CURRENT LOCATION</string>
    <string name="update">Update</string>
    <string name="city_added_to_widget">City added to widget:</string>
    <string name="await_for_information">Please wait while the weather information loads.</string>
    <string name="open">Open</string>
</resources>