<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Layout"
    android:background="@drawable/backgrounddark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="25sp"
        android:textColor="@color/white"
        android:id="@+id/cityName"
        android:background="#40000000"
        android:padding="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:layout_above="@+id/icon"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:textSize="25sp"
        android:textColor="@color/white"
        android:id="@+id/tempTitle"
        android:background="#40000000"
        android:padding="2dp"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="Actual"
        android:layout_above="@+id/temp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>
    <TextView
        android:textSize="30sp"
        android:textColor="@color/white"
        android:id="@+id/temp"
        android:background="#40000000"
        android:padding="2dp"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_above="@+id/weather"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>
    <TextView
        android:textSize="25sp"
        android:textColor="@color/white"
        android:id="@+id/weather"
        android:background="#40000000"
        android:padding="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/loading"
        android:layout_centerInParent="true"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/white"
        android:id="@+id/weather_desc"
        android:background="#40000000"
        android:padding="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/loading"
        android:layout_below="@+id/weather"
        android:layout_centerInParent="true"/>
    <TextView
        android:textSize="15sp"
        android:textColor="@color/white"
        android:id="@+id/temp_minTitle"
        android:background="#40000000"
        android:padding="2dp"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:text="@string/min"
        android:layout_toLeftOf="@+id/icon"
        android:layout_above="@+id/temp_min"
        android:textAlignment="center"/>
    <TextView
        android:textSize="25sp"
        android:textColor="@color/white"
        android:id="@+id/temp_min"
        android:background="#40000000"
        android:padding="2dp"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:text=""
        android:layout_toLeftOf="@+id/icon"
        android:layout_above="@+id/temp"
        android:textAlignment="center"/>
    <TextView
        android:textSize="15sp"
        android:textColor="@color/white"
        android:id="@+id/temp_maxTitle"
        android:background="#40000000"
        android:padding="2dp"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/max"
        android:layout_toRightOf="@+id/icon"
        android:layout_above="@+id/temp_max"
        android:textAlignment="center"/>
    <TextView
        android:textSize="25sp"
        android:textColor="@color/white"
        android:id="@+id/temp_max"
        android:background="#40000000"
        android:padding="2dp"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text=""
        android:layout_toRightOf="@+id/icon"
        android:layout_above="@+id/temp"
        android:layout_centerVertical="true"
        android:textAlignment="center"/>
    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/tempTitle"
        android:layout_centerHorizontal="true"/>
    <TableRow
        android:id="@+id/tableFirstDay"
        android:background="#80000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_below="@+id/weather_desc"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/iconFirstDay"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_column="0" />

        <TextView
            android:id="@+id/temperatureFirstDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="11dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/weatherFirstDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="11dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/firstDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="11dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableSecondDay"
        android:background="#80000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_below="@+id/tableFirstDay"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/iconSecondDay"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_column="0"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/white"
            android:id="@+id/temperatureSecondDay"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="11dp"
            android:layout_column="1"
            android:text=""
            android:textAlignment="center"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/white"
            android:id="@+id/weatherSecondDay"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="11dp"
            android:layout_column="2"
            android:text=""
            android:textAlignment="center"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/white"
            android:id="@+id/SecondDay"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="11dp"
            android:layout_column="3"
            android:text=""
            android:textAlignment="center"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableThirdDay"
        android:background="#80000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_below="@+id/tableSecondDay"
        android:layout_centerHorizontal="true">
        <ImageView
            android:id="@+id/iconThirdDay"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_column="0"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/white"
            android:id="@+id/temperatureThirdDay"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="11dp"
            android:layout_column="1"
            android:text=""
            android:textAlignment="center"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/white"
            android:id="@+id/weatherThirdDay"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="11dp"
            android:layout_column="2"
            android:text=""
            android:textAlignment="center"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/white"
            android:id="@+id/ThirdDay"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="11dp"
            android:layout_column="3"
            android:text=""
            android:textAlignment="center"/>
    </TableRow>
</RelativeLayout>